--- a/client/src/pages/frontEnd/style/frontend.scss
+++ b/client/src/pages/frontEnd/style/frontend.scss
@@ -1,11 +1,10 @@
-.frontMain {
+.mainFrontEnd {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
 
 .frontLink{
-    
     color: rgb(247, 62, 123);
     padding: 10px;
     text-decoration: none;
@@ -15,4 +14,30 @@
 
  .frontLink:focus{
     color: rgb(26, 217, 217);
+}
+// ////////////////////////
+.sidebar{
+    width: 100%;
+    padding: 50px 10px;
+    display: flex; 
+    
+  
+   &__mainLinks{
+   width: 8%;
+   
+    } 
+}
+
+.htmlLinks{
+    padding: 6px 0px;
+    color: rgb(69, 35, 237);
+    display: block;
+    text-decoration: none;
+    font-size: 20px;
+    
+}
+
+.mainc{
+    display: flex;
+    justify-content: center;
 }
