--- a/client/src/pages/frontEnd/style/frontend.scss
+++ b/client/src/pages/frontEnd/style/frontend.scss
@@ -17,19 +17,16 @@
 }
 // ////////////////////////
 .sidebar{
-    width: 100%;
-    padding: 50px 10px;
-    display: flex; 
+    // width: 100%;
+    // padding: 50px 10px;
+    // display: flex; 
     
   
-   &__mainLinks{
-   width: 8%;
-   
-    } 
+  
 }
 
 .htmlLinks{
-    padding: 6px 0px;
+    padding: 6px 10px;
     color: rgb(69, 35, 237);
     display: block;
     text-decoration: none;
