--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,11 @@
     box-sizing: border-box;
 }
 
-body{
+
+
+html, body{
+    width: 100%;
+    height: 100%;
     direction: rtl;
     background-color: rgb(137, 137, 224);
    
