--- a/client/src/pages/frontEnd/html/style/html.scss
+++ b/client/src/pages/frontEnd/html/style/html.scss
@@ -8,5 +8,11 @@ section{
     height: 100%;
     display: flex;
     justify-content: center;
-    border: 2px solid pink;
+   
+}
+
+.info{
+    width: 100%;
+    height: 100%;
+    padding: 30px;
 }
