--- a/client/src/components/infoComp/style/infosStyle.scss
+++ b/client/src/components/infoComp/style/infosStyle.scss
@@ -1,4 +1,9 @@
 
+.section{
+    padding: 60px 0px;
+ 
+}
+
 .title{
     display: flex;
     justify-content: center;
@@ -6,6 +11,7 @@
 
     &_head{
         color: yellow;
+        font-size: 36px;
     }
 }
 
@@ -15,8 +21,8 @@
     padding: 30px 0px;
 
     &_img{
-        width: 200px;
-        height: 150px;
+        width: 350px;
+        height: 300px;
     }
 }
 
