--- a/client/src/components/infoComp/style/infosStyle.scss
+++ b/client/src/components/infoComp/style/infosStyle.scss
@@ -22,7 +22,9 @@
 
     &_img{
         width: 350px;
-        height: 300px;
+        height: 350px;
+        box-shadow: -11px -4px 13px 7px rgba(0,0,0,0.75);
+        
     }
 }
 
@@ -30,4 +32,6 @@
     display: flex;
     justify-content: center;
     padding: 30px 0px;
+    color: white;
+    font-size: 22px;
 }
