--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,8 +10,10 @@ html, body{
     width: 100%;
     height: 100%;
     direction: rtl;
-    background-color: rgb(137, 137, 224);
-   
+    /* background-color: rgb(184, 184, 244); */
+    background-color: rgb(208, 191, 255);
+    
+
 }
 
 .container{
@@ -21,12 +23,11 @@ html, body{
 }
 
 .sideBar{
- border:2px solid green;
+ 
  width: 10%;
 }
 
 .mainCenter{
-   border:2px solid rgb(205, 92, 22);
    width: 100%;
 
 }
