--- a/client/src/components/infoComp/style/infosStyle.scss
+++ b/client/src/components/infoComp/style/infosStyle.scss
@@ -1,16 +1,23 @@
+$primary-color: #f31559; // pink-red
+$secondary-color: #FEFBF6; // white
+$background-color: #3D3C42; // gray black
+$title-color: #7F5283; // purple
+$text-color: #A6D1E6; // Dark Gray
+$btn-color: #0074d9; // light-blue
 
-.section{
+
+.allsection{
     padding: 10px 0px;
  
 }
 
-.title{
+.infotitle{
     display: flex;
     justify-content: center;
     padding: 30px 0px;
 
     &_head{
-        color: yellow;
+        color:$text-color;
         font-size: 36px;
     }
 }
@@ -21,9 +28,9 @@
     padding: 30px 0px;
 
     &_img{
-        width: 350px;
-        height: 350px;
-        box-shadow: -11px -4px 13px 7px rgba(0,0,0,0.75);
+        width: 300px;
+        height: 300px;
+        box-shadow: -11px -4px 13px 7px #000000bf;
         
     }
 }
@@ -32,6 +39,6 @@
     display: flex;
     justify-content: center;
     padding: 30px 0px;
-    color: white;
+    color: $secondary-color;
     font-size: 22px;
 }
