--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,10 +1,3 @@
-// $primary-color: #f31559; // pink-red
-// $secondary-color: #FEFBF6; // white
-// $background-color: #3D3C42; // gray black
-// $title-color: #7F5283; // purple
-// $text-color: #A6D1E6; // Dark Gray
-// $btn-color: #0074d9; // light-blue
-
 $Secondprimary-color: #2B8FBF; // lightblue
 $Secondsecondary-color:#EEEEEE; // white
 $Secondbackground-color: #231F20; // black
@@ -22,8 +15,8 @@ $Secondbtn-color:#7F5283; // lightpurple
 
 
 html, body{
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
     direction: ltr;
     background-color:$Secondprimary-color;
     
